# majority-mock-app

./: .gitignore  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
callback_functions/: __init__.py  content.py  graphs.py  sponsors.py  tables.py
data/: data_processor.py
models/drivers/: data_processor.py
src/: app.py
src/callback_functions/: __init__.py  content.py
src/data/: __init__.py  data_processor.py
