[tool.poetry]
name = "majority-mock-app"
version = "0.1.0"
description = ""
authors = ["barbaracalderon <bcalderoni.ti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
dash = "^2.16.1"
dash-mantine-components = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
